fix alignment left from image part

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,8 +62,8 @@ button{
     align-items: center;
     margin-top: 50px;
     padding-bottom: 50px;
-    margin-left: 100px;
-    margin-right:100px;
+    margin-left: 80px;
+    margin-right: 125px;
 
 }
 
